crates/swc_ecma_parser/tests/test262-error-references/fail/f30170f05890cff7.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/f30170f05890cff7.js:1:2
  |
1 | (10, 20) => 00
  |  ^^

error: Not a pattern
 --> $DIR/tests/test262-parser/fail/f30170f05890cff7.js:1:6
  |
1 | (10, 20) => 00
  |      ^^

